--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "less": "^4.2.0",
     "npm-run-all2": "^6.0.6",
     "typescript": "~5.2.0",
     "vite": "^4.4.9",
